backend-microservices-KiND/k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: letsplaypro-ingress
  namespace: letsplaypro
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m" # product image uploads go through here
spec:
  ingressClassName: nginx
  rules:
    - host: letsplaypro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: { number: 3000 }
